--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,28 @@
-.css-working {
-  color: green;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.inputs-grid {
+  max-width: 30%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem 1.5rem;
+  align-items: center;
+}
+.inputs-grid label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+#start-ayah,
+#end-ayah {
+  width: 14ch;
 }
