--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ input[type="number"] {
    ============================================ */
 @font-face {
   font-family: "KFGQPC-Uthmanic";
-  src: url("/fonts/KFGQPC Uthmanic Script HAFS Regular.otf") format("truetype");
+  src: url("fonts/KFGQPC Uthmanic Script HAFS Regular.otf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: block;
