--- a/css/components/quiz.css
+++ b/css/components/quiz.css
@@ -146,6 +146,9 @@
   font-weight: 600;
   min-width: 1.5rem;
   text-align: center;
+  max-width: 3ch;
+  font-variant-numeric: tabular-nums;
+  text-align: left;
 }
 
 /* Quiz Output */
