--- a/css/components/quiz.css
+++ b/css/components/quiz.css
@@ -108,8 +108,8 @@
 #mistake-counter-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 0.75rem;
+  justify-content: space-between;
+  gap: 0.5rem;
 
   background-color: var(--mistake-bg);
   color: var(--mistake-text);
@@ -142,13 +142,19 @@
   color: var(--accent-color);
 }
 
+.mistake-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem;
+}
+
 #mistake-count {
   font-weight: 600;
-  min-width: 1.5rem;
-  text-align: center;
-  max-width: 3ch;
+  width: 3ch;
+  text-align: start;
   font-variant-numeric: tabular-nums;
-  text-align: left;
+  display: inline-block;
 }
 
 /* Quiz Output */
